Improve setup output